Updated implementet req.list.

--- a/docs/latex_rapport/sections/implementeretKravliste.tex
+++ b/docs/latex_rapport/sections/implementeretKravliste.tex
@@ -25,56 +25,55 @@
 \begin{document}
 
     \begin{table}[]
-        \begin{tabular}{|l|l|l|l|}
-            \hline
-            Krav nr.        & Implementeret? & Evt. kommentar     &                                                                                                                                                                                                    \\ \hline
-            Must have       &                &                    &                                                                                                                                                                                                    \\ \hline
-            & K1             & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K2             & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K3             & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K4             & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K5             & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K6             & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K7             & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K8             & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K9             & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K10            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K11            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K12            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K13            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K14            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K15            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K16            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K17            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K18            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K19            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            Should have     &                &                    &                                                                                                                                                                                                    \\ \hline
-            & K20            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K21            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K22            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K23            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K24            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K25            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            Could have      &                &                    &                                                                                                                                                                                                    \\ \hline
-            & K26            & Nej                &                                                                                                                                                                                                    \\ \hline
-            & K27            & Nej                &                                                                                                                                                                                                    \\ \hline
-            & K28            & Nej                &                                                                                                                                                                                                    \\ \hline
-            & K29            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            & K30            & Ja (kun ramme)     &                                                                                                                                                                                                    \\ \hline
-            & K31            & Nej                &                                                                                                                                                                                                    \\ \hline
-            & K32            & Nej                & Bliver ikke solgt ved auktion, men bliver bare overført til banken.                                                                                                                                \\ \hline
-            Wont have       &                &                    &                                                                                                                                                                                                    \\ \hline
-            & K33            & Nej                &                                                                                                                                                                                                    \\ \hline
-            Supportablility &                &                    &                                                                                                                                                                                                    \\ \hline
-            & K34            & Nej (omformuleres) & “ikke nemt”                                                                                                                                                                                        \\ \hline
-            Usability       &                &                    &                                                                                                                                                                                                    \\ \hline
-            & K35            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            Extensibility   &                &                    &                                                                                                                                                                                                    \\ \hline
-            & K36            & Ja                 & Vi har gennem projektet haft fokus på at anvende controller, creator og information expert til at opnå lav coupling og high cohesion. Yderligere, er polymorfisme og visitor pattern også anvendt. \\ \hline
-            Hardware        &                &                    &                                                                                                                                                                                                    \\ \hline
-            & K37            & Ja                 &                                                                                                                                                                                                    \\ \hline
-            Software        &                &                    &                                                                                                                                                                                                    \\ \hline
-            & K38            & Ja                 &                                                                                                                                                                                                    \\ \hline
+        \begin{tabular}{llll}
+            & Krav nr. & Implementeret?     & Evt. kommentar                                                                                                                                                                                     \\
+            Must have       &          &                    &                                                                                                                                                                                                    \\
+            & K1       & Ja                 &                                                                                                                                                                                                    \\
+            & K2       & Ja                 &                                                                                                                                                                                                    \\
+            & K3       & Ja                 &                                                                                                                                                                                                    \\
+            & K4       & Ja                 &                                                                                                                                                                                                    \\
+            & K5       & Ja                 &                                                                                                                                                                                                    \\
+            & K6       & Ja                 &                                                                                                                                                                                                    \\
+            & K7       & Ja                 &                                                                                                                                                                                                    \\
+            & K8       & Ja                 &                                                                                                                                                                                                    \\
+            & K9       & Ja                 &                                                                                                                                                                                                    \\
+            & K10      & Ja                 &                                                                                                                                                                                                    \\
+            & K11      & Ja                 &                                                                                                                                                                                                    \\
+            & K12      & Ja                 &                                                                                                                                                                                                    \\
+            & K13      & Ja                 &                                                                                                                                                                                                    \\
+            & K14      & Ja                 &                                                                                                                                                                                                    \\
+            & K15      & Ja                 &                                                                                                                                                                                                    \\
+            & K16      & Ja                 &                                                                                                                                                                                                    \\
+            & K17      & Ja                 &                                                                                                                                                                                                    \\
+            & K18      & Ja                 &                                                                                                                                                                                                    \\
+            & K19      & Ja                 &                                                                                                                                                                                                    \\
+            Should have     &          &                    &                                                                                                                                                                                                    \\
+            & K20      & Ja                 &                                                                                                                                                                                                    \\
+            & K21      & Ja                 &                                                                                                                                                                                                    \\
+            & K22      & Ja                 &                                                                                                                                                                                                    \\
+            & K23      & Ja                 &                                                                                                                                                                                                    \\
+            & K24      & Ja                 &                                                                                                                                                                                                    \\
+            & K25      & Ja                 &                                                                                                                                                                                                    \\
+            Could have      &          &                    &                                                                                                                                                                                                    \\
+            & K26      & Nej                &                                                                                                                                                                                                    \\
+            & K27      & Nej                &                                                                                                                                                                                                    \\
+            & K28      & Nej                &                                                                                                                                                                                                    \\
+            & K29      & Ja                 &                                                                                                                                                                                                    \\
+            & K30      & Ja (kun ramme)     &                                                                                                                                                                                                    \\
+            & K31      & Nej                &                                                                                                                                                                                                    \\
+            & K32      & Nej                & Bliver ikke solgt ved auktion, men bliver bare overført til banken.                                                                                                                                \\
+            Wont have       &          &                    &                                                                                                                                                                                                    \\
+            & K33      & Nej                &                                                                                                                                                                                                    \\
+            Supportablility &          &                    &                                                                                                                                                                                                    \\
+            & K34      & Nej (omformuleres) & “ikke nemt”                                                                                                                                                                                        \\
+            Usability       &          &                    &                                                                                                                                                                                                    \\
+            & K35      & Ja                 &                                                                                                                                                                                                    \\
+            Extensibility   &          &                    &                                                                                                                                                                                                    \\
+            & K36      & Ja                 & Vi har gennem projektet haft fokus på at anvende controller, creator og information expert til at opnå lav coupling og high cohesion. Yderligere, er polymorfisme og visitor pattern også anvendt. \\
+            Hardware        &          &                    &                                                                                                                                                                                                    \\
+            & K37      & Ja                 &                                                                                                                                                                                                    \\
+            Software        &          &                    &                                                                                                                                                                                                    \\
+            & K38      & Ja                 &
         \end{tabular}
     \end{table}
 
