--- a/docs/latex_rapport/main.tex
+++ b/docs/latex_rapport/main.tex
@@ -55,6 +55,8 @@
 \import{artifacts/}{interessent_analyse}
 \subsection{Kravspecifikation}
 \import{artifacts/}{kravliste}
+\subsection{Implementerede krav}
+\import{sections/}{implementeretKravliste}
 \newpage
 \subsection{Use case diagram}
 \import{artifacts/}{use_case_diagram}
@@ -101,7 +103,7 @@
 \import{test_cases/}{TC2_setCorrectSiblingsTest}
 \subsection{Itegration testing}
 
-\subsection{Acceptance testing}
+\subsection{Internal Acceptance Testing}
 \import{test_cases/}{acceptence_test}
 
 \section{Konklution}
